--- a/app/src/main/res/drawable/ic_back.xml
+++ b/app/src/main/res/drawable/ic_back.xml
@@ -4,7 +4,13 @@
     android:tint="#BBB"
     android:viewportWidth="24"
     android:viewportHeight="24">
+    <group
+        android:translateX="24"
+        android:scaleX="-1"
+        android:rotation="0">
     <path
         android:fillColor="@android:color/white"
         android:pathData="M6,18l8.5,-6L6,6v12zM16,6v12h2V6h-2z" />
+    </group>
+
 </vector>
