--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
         android:background="@android:color/background_light"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/songs"
-        tools:context=".PlayerControlsFragment">
+        tools:context=".PlayerControlsFragment"
+        tools:layout_editor_absoluteX="-152dp">
 
         <ImageView
             android:id="@+id/art"
@@ -36,9 +37,9 @@
             android:layout_marginTop="16dp"
             android:text="Title"
             android:textColor="#070707"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintBottom_toTopOf="@+id/artist"
             app:layout_constraintEnd_toStartOf="@+id/search"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/art"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -49,9 +50,9 @@
             android:layout_marginBottom="76dp"
             android:text="Artist"
             android:textColor="#000000"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/search"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/art"
             app:layout_constraintTop_toBottomOf="@+id/title" />
 
@@ -60,8 +61,8 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="10dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="92dp"
-            android:layout_marginEnd="64dp"
             android:background="@drawable/ic_back"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/play"
@@ -74,47 +75,61 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="10dp"
+            android:layout_marginEnd="52dp"
+            android:layout_marginBottom="12dp"
             android:background="@drawable/ic_pause"
-            app:layout_constraintEnd_toStartOf="@+id/stop"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/back"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintEnd_toStartOf="@+id/stop" />
 
         <ImageButton
             android:id="@+id/stop"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="10dp"
-            android:layout_marginEnd="160dp"
+            android:layout_marginBottom="12dp"
             android:background="@drawable/ic_stop"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/next"
             app:layout_constraintStart_toEndOf="@+id/play"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintEnd_toStartOf="@+id/next" />
 
         <ImageButton
             android:id="@+id/next"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="10dp"
-            android:layout_marginEnd="108dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginEnd="52dp"
             android:background="@drawable/ic_next"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/share"
             app:layout_constraintStart_toEndOf="@+id/stop"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
 
         <ImageButton
             android:id="@+id/search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_width="49dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.183"
+            app:layout_constraintVertical_bias="0.181"
             app:srcCompat="@drawable/ic_search" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/share"
+            android:layout_width="44dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="3dp"
+            android:clickable="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.8"
+            app:layout_constraintStart_toEndOf="@+id/next"
+            app:layout_constraintTop_toBottomOf="@+id/search"
+            app:srcCompat="@android:drawable/ic_menu_share" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
